--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,8 @@
 name: Deploy to Cloudflare Workers
 on:
   push:
-    branches: [main]
-  workflow_dispatch:  # 添加这一行，启用手动触发
-  branches: [main]    # 保留原有的分支触发配置
+    branches: [main]  # 保留原有的分支触发配置
+  workflow_dispatch:  # 添加手动触发（和 push 同级）
 jobs:
   deploy:
     runs-on: ubuntu-latest
