--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,6 +1,6 @@
-   {
-     "name": "gcli2api-worker",
-     "compatibility_date": "2026-02-13",
-     "main": "index.ts"  // 改为 index.ts
-   }
-   
+  {
+    "name": "gcli2api",  // 修改为 Cloudflare 中的 Worker 名称
+    "compatibility_date": "2026-02-13",
+    "main": "index.ts"
+  }
+  
